First 5 chapter finished

--- a/Proposal/2related_work.tex
+++ b/Proposal/2related_work.tex
@@ -97,7 +97,7 @@ Researchers have attempted to examine users' privacy preferences in different ar
 In the other hand, users are found to have difficulties managing their privacy settings with current privacy-setting schemes. Liu et al. use an online survey (N=200) to investigate the difference between the desired privacy settings and the actual privacy settings of Facebook users. Their results show that 63\% of the privacy settings for photo sharing were not match the users' desired settings. In~\cite{madejski2012study}, Madejski et al. conduct user studies to find the difference between Facebook users’ sharing intentions and their actual privacy settings. Their results show that there is at least one violation in the privacy settings for each of the 65 participants.
 
 The reasons for the failure of existing privacy-setting schemes are diversified. One reason for this is the increasing number of privacy rules make manual privacy configuration excessively challenging for normal users~\cite{furnell2015managing}. Knijnenburg et al. discover that people’s information disclosure behaviours
-are affected by multiple dimensions~\cite{knijnenburg2013dimensionality}. people can be classified along these dimensions into groups with different ``disclosure styles". This result suggests that we could classify users into their respective privacy group and adapt its privacy practices to the disclosure style of this group to satisfy different types of information and users. However, more privacy policies in the other would lead to more decision-making and more burden for users. Note that in the IoT environment, the number for different IoT devices could be vast, which could potentially make choosing adequate privacy settings a very challenging task that is likely to result in information and choice overload~\cite{williams2016perfect}. Therefore, we used a data-driven approach (machine learning techniques) to discover the suitable smart privacy profiles for the user groups with different ``disclosure styles".
+are affected by multiple dimensions~\cite{knijnenburg2013dimensionality}. people can be classified along these dimensions into groups with different ``disclosure styles". This result suggests that we could classify users into their respective privacy grousp and adapt its privacy practices to the disclosure style of this group to satisfy different types of information and users. However, more privacy policies in the other would lead to more decision-making and more burden for users. Note that in the IoT environment, the number for different IoT devices could be vast, which could potentially make choosing adequate privacy settings a very challenging task that is likely to result in information and choice overload~\cite{williams2016perfect}. Therefore, we used a data-driven approach (machine learning techniques) to discover the suitable smart privacy profiles for the user groups with different ``disclosure styles".
 
 \section{Privacy in IoT}
 IoT systems are capable of providing a highly personalized services to their users~\cite{vallee2016personalization, etzion2014personalization, hemant2015internet}. Henka et al.~\cite{henka2016personalizing} propose an approach to personalize services in household IoT using the Global Public Inclusive Infrastructure's~\cite{vanderheiden2011creating} preference set to describe an individual's needs and preferences, and then adapting a smart environment accordingly. Russell et al.~\cite{russell2015personalization} use unobtrusive sensors and micro-controller to realize a human detection for further providing personalization in a scenario of a family making use of the IoT in their daily living.
@@ -149,4 +149,4 @@ In this proposal, we extend this \emph{clustering} approach to find the best pro
 \section{Summary}
 In this chapter, we have noted following points: 1) Existing research has shown that people are extensively different in their privacy settings, but can be grouped. 2) People are bad at managing privacy settings using currently privacy setting schemes. 3) Privacy prediction can be used by utilizing machine learning algorithms to help design a new privacy-setting interface to simplify the task of managing privacy setting for users. 
 
-In the next chapter, we will examine our methodology in the general/public IoT context, and compare it with the existing research.
+In the next chapter, we will examine our methodology in the general/public IoT context, present our contributions as well the limitations of our work.
