--- a/Proposal/4householdIoT.tex
+++ b/Proposal/4householdIoT.tex
@@ -1,24 +1,42 @@
 % !TeX root = proposal.tex
 \chapter{Recommending Privacy Settings for Household IoT}\label{chapter:householdIoT}
 
-In Chapter~\ref{chapter:generalIoT}, we have discussed recommending privacy preference for general IoT users. In this chapter, we present the work completed to date in the areas of designing for privacy for Household IoT. We expand and improve upon the previously-developed data-driven approach to design privacy-setting interfaces for users of household IoT devices. Moving the context to a more narrow environment shifts the focus of the privacy decision from the entity collecting information (which was the dominant parameter in our previous work) to a more contextual evaluation of the content or nature of the information ~\cite{nissenbaum_privacy_2004}. 
+\section{Introduction}
+In Chapter~\ref{chapter:generalIoT}, we have discussed how we apply the data-driven approach in the general/public IoT context and developed an IoT privacy-setting interface prototype that integrated a layered interface with smart defaults/profiles by predicting users' privacy decisions. In this chapter, we present the work completed to date in the areas of designing for privacy for Household IoT. We expand and improve upon the previously-developed data-driven approach to design privacy-setting interfaces for users of household IoT devices. Moving the context to a more narrow environment shifts the focus of the privacy decision from the entity collecting information (which was the dominant parameter in our previous work) to a more contextual evaluation of the content or nature of the information ~\cite{nissenbaum_privacy_2004}. In addition, as discussed in~\ref{sec:publiclim}, an important limitation that we did not solve in our previous work is balancing the trade-off between parsimony and accuracy. Accuracy is important to ensure that users' privacy preferences are accurately captured and/or need only few manual adjustments. Parsimony, on the other hand, prevents overfitting and promotes fairness: we noticed that more complex models tended to increase overall accuracy by predicting a few users' preferences more accurately, with no effect on other users. Parsimony also makes the associated default setting easier to understand for the user. In this chapter, we try to address these concerns.
 
-\section{Experimental Setup}\label{sec:exp_setup}
-In Chapter~\ref{chapter:generalIoT}, we found that "where" does not have significant effect on disclosure decisions; also the usage environment of household IoT systems/devices are always in users' home. Moreover, the structure of users' houses are different from case to case, it would be too complicated if we define "where" to a more finer-granulated level, such as bedroom, kitchen, etc.,  Hence there there is no need to retain the parameter "where". ``Persistence" of tracking is more relevant in public IoT, where encounters are often ephemeral, hence persistent tracking is less common than in household IoT. ``Storage" and ``Action" allow us to explore secondary uses of the information; something we learned from the qualitative feedback in our previous study was a prominent concern among users.
+\section{Experiment Setup}\label{sec:exp_setup}
+In Chapter~\ref{chapter:generalIoT}, we leveraged data collected by Lee and Kobsa~\cite{lee2016understanding}, which asked 200 participants about their intention to allow or reject the IoT features presented in 14 randomized scenarios. They varied the scenarios in a mixed fractional factorial design along the following dimensions: `Who', `What', `Where', `Reason', `Persistence'. These all are appropriate dimensions for general/public IoT context, however, a new user study is needed for collecting data in the domain of household IoT. Given that we are narrowing our focus of IoT context in the chapter from general/public IoT to household IoT, it is necessary to investigate whether these dimensions are still suitable for our next-step experiment. At the same time, some new parameters may need to be added into our consideration for better expressing the features of the new, narrowed IoT context. 
 
-Because of the above reasons, we conducted a new user study focusing on household IoT in particular, and further refine our approach to allow us to create more carefully tailored user interfaces. In this section, we first discuss the factorial procedure by which we developed 4608 highly specific IoT scenarios, as well as the questions we asked participants to evaluate these scenarios. We then describe the participant selection and experimental procedures used to collect over 13500 responses from 1133 participants.
+In this section, we first discuss the changes in IoT context dimensions for our new user study. We then present the factorial procedure by which we developed 4608 highly specific IoT scenarios, as well as the questions we asked participants to evaluate these scenarios. Finally, we describe the participant selection and experimental procedures used to collect over 13500 responses from 1133 participants.
+
+\subsection{Dimension Design}
+We consider following dimension design changes in our user study:
+\begin{itemize}
+    \item When applying our data-driven approach on Lee and Kobsa's dataset in previous chapter, we found the dimension ``where" does not have a significant effect on uses' disclosure decisions. Considering that we are moving to household IoT context, the usage environments will always be in users' home. Moreover, the structure of users' houses are different from case to case, it would be too complicated if we define "where" to a more finer-granulated level, such as bedroom, kitchen, etc.  Hence there there is no need to retain the parameter "where". 
+    \item ``Persistence" of tracking is more relevant in public IoT, while persistent tracking is less common in household IoT. Hence, we removed ``Persistence" from our current experiment.
+    \item From the qualitative feedback in our previous study, we have learned that the secondary use of information was a prominent concern among users. Hence, we split the original dimension ``purpose" into two dimensions -- ``purpose" and ``Action", where the latter one will be used to indicate the secondary use of information.
+    \item A new dimension ``Storage" were added in addition to our existing dimensions for household IoT context because it is possible for household IoT systems to operate (and thus store data) locally, and because the sharing of data with third parties is not as common in household IoT as in public IoT.
+\end{itemize}
+
+By applying above dimension changes, we aim to conduct a new user study focusing on household IoT in particular, and further refine our approach to allow us to create more carefully tailored user interfaces for household IoT context. Next, we. present the factorial procedure by which we developed highly specific household IoT scenarios.
 
 \subsection{Contextual Scenarios}
 The scenarios evaluated in our study are based on a full factorial combination of five different Parameters: Who, What, Purpose, Storage and Action. A total of $8(who)*12(what)*4(purpose)*4(storage)*3(action) = 4608$ scenarios were tested this way. 
 
 The scenarios asked participants to imagine that they were owners and active users of the presented IoT devices, trying to decide whether to turn on or off certain functionalities and/or data sharing practices. To avoid endowment effects, the scenarios themselves made no indication as to whether the functionality was currently turned on or off (such endowment effects were instead introduced by manipulating the framing of the Decision question; see section \ref{sec:questions}). An example scenarios is: \emph{``Your smart TV (Who) uses a camera (What) to give you timely alerts (Purpose). The data is stored locally (Storage) and used to optimize the service (Action).''} This scenario may for example represent a situation where the smarthome system has detected (via camera) a delivery of package and then alerts the user (via the smart TV) about its arrival. In this particular scenario we note that the video data is stored locally to optimize service; this could mean that the smarthome system uses the video stream to (locally) train a package detection algorithm. Similarly, another example of scenario is: \emph{``Your Smart Assistant uses a microphone to detect your location in house. The data is stored on a remote server and shared with third parties to recommend you other services.''} Similarly, this scenario could represent a situation where the smarthome has detected (via microphone) it's user's location in the house and this information is shared to smart assistant. In the scenario, the data is stored on remote server and shared with third parties so that it can recommend additional services (like weather or local transportation) via third parties to the user.
 
-The levels of all five parameters used in our experiment are shown in Table~\ref{tab:parameter2}. The parameters were highlighted in the scenario for easy identification, and upon hovering the mouse cursor over them each parameter would show a succinct description of the parameter. %\textcolor{blue}{Figure~\ref{fig:scenario} in the Appendix shows a screenshot of a scenario as shown to participants in the study.}
-A thirteenth scenario regarding the interrelated control of various IoT devices (e.g. \emph{``You can use your smart TV to control your smart refrigerator''}) was also asked, but our current analysis focuses on the information-sharing scenarios only.
+The levels of all five parameters used in our experiment are shown in Table~\ref{tab:parameter2}. The parameters were highlighted in the scenario for easy identification, and upon hovering the mouse cursor over them each parameter would show a succinct description of the parameter. Figure~\ref{fig:scenario} shows a screenshot of a scenario as shown to participants in the study. A thirteenth scenario regarding the interrelated control of various IoT devices (e.g. \emph{``You can use your smart TV to control your smart refrigerator''}) was also asked, but our current analysis focuses on the information-sharing scenarios only.
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.98\textwidth]{figures/scenario.png}
+	\caption{Example of one of the thirteen scenarios presented to the participants.}
+	\label{fig:scenario}
+\end{figure}
 
 \subsection{Scenario Evaluation Questions}
 \label{sec:questions}
-The first question participants were asked about each scenario was whether they would enable or disable the particular feature mentioned in scenario (Decision). Subsequently, they were asked about their attitudes regarding the scenario in terms of their perceived Risk, Appropriateness, Comfort, Expectedness and Usefulness regarding the presented scenario (e.g., \emph{``How appropriate do you think this scenario is?''}). These questions were answered on a 7-point scale (e.g., \emph{``very inappropriate''} to \emph{``very appropriate''}). In every 4th scenario, the Risk and Usefulness questions were followed by an open question asking the participants to describe the potential Risk and Usefulness of the scenario. We asked these question mainly to encourage participants to carefully evaluate the scenarios.%A screenshot of the questions asked about each scenario is depicted in Figure~\ref{fig:scenario} in the Appendix.
+The first question participants were asked about each scenario was whether they would enable or disable the particular feature mentioned in scenario (Decision). Subsequently, they were asked about their attitudes regarding the scenario in terms of their perceived Risk, Appropriateness, Comfort, Expectedness and Usefulness regarding the presented scenario (e.g., \emph{``How appropriate do you think this scenario is?''}). These questions were answered on a 7-point scale (e.g., \emph{``very inappropriate''} to \emph{``very appropriate''}). In every 4th scenario, the Risk and Usefulness questions were followed by an open question asking the participants to describe the potential Risk and Usefulness of the scenario. We asked these question mainly to encourage participants to carefully evaluate the scenarios. Figure~\ref{fig:scenario} shows the questions asked about each scenario.
 
 %In addition to the twelve scenarios, the participants were also presented with a 13th scenario. This scenario was focused on giving the participants an ability to control for collection of information by devices. This was done by changing the for \emph{Who} and \emph{What} parameters. However, the rest of the parameters were kept same while forming the scenario. 
 The framing and default of the Decision question were manipulated between-subjects at three levels each: positive framing (``Would you enable this feature?'', options: Yes/No), negative framing (``Would you disable this feature?'', options: Yes/No) or neutral framing (``What would you do with this feature?'', options: Enable/Disable); combined with a positive default (enabled by default), negative default (disabled by default), or no default (forced choice).
@@ -83,9 +101,38 @@ To collect our dataset, 1133 adult U.S.-based participants (53.53\% Female, 45.7
 
 The study participants represented a wide range of ages, with 9 participants less than 20 years old, 130 aged 20-25, 273 aged 25-30, 418 aged 30-40, 175 aged 40-50, 80 aged 50-60, and 43 participants over 60 years old (5 participants did not disclose their age). This significant increase in participants over the Lee and Kobsa~\cite{lee2016understanding} dataset is commensurate with our expectation of more complex privacy decision behaviors in household IoT compared to public IoT.
 
-Each participant was first shown a video with a brief introduction to various smart home devices, which also mentioned various ways in which the different appliances would cooperate and communicate within a home. After the video, participants were asked to answer three attention check questions. If they got any of these questions wrong, they would be asked to read the transcript of the video and re-answer the questions.
+Each participant was first shown a video with a brief introduction to various smart home devices, which also mentioned various ways in which the different appliances would cooperate and communicate within a home. After the video, participants were asked to answer three attention check questions, shown in Figure~\ref{fig:attn1}. If they got any of these questions wrong, they would be asked to read the transcript of the video and re-answer the questions. The transcript is shown in Figure~\ref{fig:attn2}
 
-After the introduction video, each participant was presented with 12 information-sharing scenarios (and a 13th control scenario, not considered in this paper). These scenarios were selected from the available 4608 scenarios using fractional factorial design\footnote{The scenario assignment scheme is available at \url{https://www.usabart.nl/scenarios.csv}} that balances the within- and between-subjects assignment of each parameter's main effect, and creates a uniform exposure for each participant to the various parameters (i.e., to avoid ``runs'' of near-similar scenarios). Participants were asked to carefully read the scenario and then answer all questions about it. Two of the 13 scenarios had an additional attention check question (e.g., ``Please answer this question with Completely Agree'', and there was an additional attention check question asking participants about the remaining time to finish the study (which was displayed right there on the same page. Participants rushing through the experiment and/or repeatedly failing the attention check questions were removed from the dataset.
+\begin{figure}
+	\centering
+	\includegraphics[width=0.8\textwidth]{figures/attn1.PNG}
+	\caption{Attention check questions asked to participants}
+	\label{fig:attn1}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.8\textwidth]{figures/attn2.PNG}
+	\caption{Transcript of video shown to participants if they failed attention checks.}
+	\label{fig:attn2}
+\end{figure}
+
+After the introduction video, each participant was presented with 12 information-sharing scenarios (and a 13th control scenario, not considered in this paper). These scenarios were selected from the available 4608 scenarios using fractional factorial design\footnote{The scenario assignment scheme is available at \url{https://www.usabart.nl/scenarios.csv}} that balances the within- and between-subjects assignment of each parameter's main effect, and creates a uniform exposure for each participant to the various parameters (i.e., to avoid ``runs'' of near-similar scenarios). Participants were asked to carefully read the scenario and then answer all questions about it. Two of the 13 scenarios had an additional attention check question (e.g., ``Please answer this question with Completely Agree'', see Figure~\ref{fig:attn_S}), and there was an additional attention check question asking participants about the remaining time to finish the study (which was displayed right there on the same page, see~\ref{fig:attn_time}). Participants rushing through the experiment and/or repeatedly failing the attention check questions were removed from the dataset.
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.8\textwidth]{figures/scenario_attn.PNG}
+	\caption{\textcolor{blue}{Attention check question shown while participants are answering questions per scenario.}}
+	\label{fig:attn_S}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.8\textwidth]{figures/time.PNG}
+	\caption{\textcolor{blue}{Attention check question asked to participants.}}
+	\label{fig:attn_time}
+\end{figure}
+
 %
 %\section{Inspecting Users' Decisions}\label{sec:inspect}
 %In this section we explain the different regression analyses performed on the dataset to understand how different scenario parameters affected the decisions made by participants. We begin by explaining the effects of scenario parameters on participants' decision to enable or disable the feature mentioned in the scenario. Similar to Bahirat et. al., we also present the results of the mediation analysis, which are on the lines of attitude-behavior models~\cite{bahiratiui2018,ajzen1977attitude}. As shown in Figure~\ref{fig:mediation_test}, we test whether participants' attitudes mediate the effects of the scenario parameters on their decisions. This mediation analysis involves the following tests:
@@ -309,7 +356,7 @@ After the introduction video, each participant was presented with 12 information
 %\textbf{What}: This parameter had twelve different values and there were numerous combinations that were significant when we checked the post-hoc effects. We limit our discussion to the differences between the `Smart Assistant' and the other values of this parameter, because these specific differences are consistently significant. The reader is invited to inspect Figure~\ref{fig:who_post} in the Appendix for other differences. Participants found it more appropriate ($d$ range $= [0.213, 0.756]$, all $p$s $< .001$) and useful ($d$ range $= [0.365, 0.683]$, all $p$s $< .01$) when information collected by their smart assistant was being accessed as compared to other devices like cameras or microphones. The participants also found it less risky ($d$ range $= [0.385, 0.759]$, all $p$s $< .05$) and were more comfortable ($d$ range $= [0.430,0.821]$, all $p$s $< .01$) to grant access to information collected by their smart assistant than their camera or microphone. Participants also expected more to share information collected by their smart assistant as compared to other devices such as cameras ($d = 0.62$, $p < .01$), microphones ($d = 0.39$, $p < .01$), or their smart alarm clock ($d = 0.21$, $p = .027$). The odds of giving access to information collected by their smart assistant were higher than for cameras by 2.7 times ($p < .001$), microphones by 1.8 times ($p < .001$), their Smart TV by 1.15 times ($p < .001$) and their smart washing machine by 1.8 times ($p < .001$).
 
 \section{Statistical Analysis}\label{sec:statAlys2}
-Our statistical analysis shows that unlike results from~\cite{bahiratiui2018}, all parameters had a significant effect. Particularly, where the information is stored and if/how it is shared with third parties (`Storage' parameter) has the strongest impact on users' decision, followed by `What', `Who' and `Purpose' (all similar) and finally `Action'. Moreover, substantial two-way interaction effects were observed between `Who', `What', and `Purpose', which suggest that when users decide on one parameter, they inherently take another parameter into account. Based on these results, we designed an interface, which separated `Device/Sensor Management' and `Data Storage \& Usage', for users to manually change their privacy settings. 
+Our statistical analysis~\footnote{The statistical analysis were conducted by my co-author Paritosh Bahirat. These endeavors are presented in summarized form since they are not an official part of this dissertation. For more details, please refer to~\cite{He2018data}.} shows that unlike results from~\cite{bahiratiui2018}, all parameters had a significant effect. Particularly, where the information is stored and if/how it is shared with third parties (`Storage' parameter) has the strongest impact on users' decision, followed by `What', `Who' and `Purpose' (all similar) and finally `Action'. Moreover, substantial two-way interaction effects were observed between `Who', `What', and `Purpose', which suggest that when users decide on one parameter, they inherently take another parameter into account. Based on these results, we designed an interface, which separated `Device/Sensor Management' and `Data Storage \& Usage', for users to manually change their privacy settings. 
 
 We also analyze the effects of defaults and framing. As outlined in section \ref{sec:questions}, the framing and default of the Decision question in our study were manipulated between-subjects at three levels each: positive, negative, or neutral framing; combined with a positive, negative, or no default. The analysis shows that defaults and framing have direct effects on disclosure: Participants in the negative default condition are less likely to enable the functionality, while participants in the positive default condition are more likely to enable the scenario (a traditional default effect). Likewise, participants in the negative framing condition are more likely to enable the functionality (a loss aversion effect).
 
@@ -509,7 +556,14 @@ In the remainder of this section we apply existing and new clustering methods wi
 
 \subsection{Attitude-Based Clustering}
 %As shown in Figure~\ref{fig:mediation_test}, 
-Our statistical results indicate that the effects of scenario parameters on users' decisions are mediated by their attitudes (Risk, Comfort, Appropriateness, Expectedness and Usefulness). Therefore, our first attempt to develop ``smart profiles'' is to cluster participants with similar attitudes towards the 12 scenarios they evaluated. We averaged the values per attitude across each participant's 12 answers, and ran a \textit{k-means} clustering algorithm to divide them into 2, 3, 4, 5, and 6 clusters. We then added the participants' cluster assignments back to our original dataset, and ran the J48 decision tree algorithm on the dataset with this additional \emph{Cluster} attribute for each number of clusters, varying the Confidence Factor from 0.01 to 0.25 with increments of 0.01. The results are summarized in Figure~\ref{fig:attitudesum}, which displays the most accurate solution for any given tree size and number of clusters.
+Our statistical results indicate that the effects of scenario parameters on users' decisions are mediated by their attitudes (Risk, Comfort, Appropriateness, Expectedness and Usefulness), as shown in Figure~\ref{fig:mediation_test2}. Therefore, our first attempt to develop ``smart profiles'' is to cluster participants with similar attitudes towards the 12 scenarios they evaluated. We averaged the values per attitude across each participant's 12 answers, and ran a \textit{k-means} clustering algorithm to divide them into 2, 3, 4, 5, and 6 clusters. We then added the participants' cluster assignments back to our original dataset, and ran the J48 decision tree algorithm on the dataset with this additional \emph{Cluster} attribute for each number of clusters, varying the Confidence Factor from 0.01 to 0.25 with increments of 0.01. The results are summarized in Figure~\ref{fig:attitudesum}, which displays the most accurate solution for any given tree size and number of clusters.
+
+\begin{figure}[htb]
+	\centering
+	\includegraphics[width=0.6\textwidth]{figures/mediation_test.pdf}
+	\caption{Different tests conducted for mediation analysis}
+	\label{fig:mediation_test2}
+\end{figure}
 
 %Actual profile numbers, average tree sizes per profile, and accuracies for resulting solutions are reported in Table~\ref{tab:attitude_results}.
 
@@ -674,7 +728,7 @@ Finally, the best 6-cluster solution\footnote{There is another solution with sli
 \end{figure}
 
 \subsection{Fit-Based Clustering}
-We now present a ``fit-based'' clustering approach that, like the agglomerative approach, clusters participants without using any additional information. Instead, it uses the fit of the tree models to bootstrap the process of sorting participants into different clusters. The steps of our algorithm are as follows:
+We now present a ``fit-based'' clustering approach that, like the agglomerative approach, clusters participants without using any additional information. Instead, it uses the fit of the tree models to bootstrap the process of sorting participants into different clusters. The process of our algorithm is similar as the one we used in previous chapter shown in Figure~\ref{fig:flow_chart_fit}. The detailed steps are as follows:
 \begin{itemize}
 	\item \textbf{Random starts:} We randomly divide participants into $k$ separate groups, and learn a tree for each group. This is repeated until a non-trivial starting solution (i.e., with distinctly different trees per group) is found. 
 	
@@ -838,3 +892,28 @@ The alternative machine learning solution presented in Figure~\ref{fig:fit_5_pro
 The interfaces presented in this section have an additional `layer' compared to the original interface presented in Section~\ref{sec:design_stat}. This additional layer makes setting the privacy settings manually more difficult, but it is necessary to accommodate the complexity of the smart profiles uncovered by our machine learning analysis. On the one hand, this demonstrates the value of developing a parsimonious machine learning model---the more accurate but more complex profiles that comprise some of the solutions in Section~\ref{sec:predict} are not only more difficult to explain to the user, they also contain more complex interactions between decision parameters, forcing the manual settings interface to become even more complex. A simple smart profile solution avoids such complexity in the interface. 
 
 On the other hand, one should not over-simplify the profiles, lest they become overly generic and inaccurate in representing users' privacy preferences. Indeed, when we make our smart profile solutions more accurate, fewer users will need to make any manual adjustments at all, so we can allow some additional complexity in the interface.
+
+\section{Limitations}\label{sec:future_work}
+
+In this section, we discuss the limitations of our work, our plans to evaluate the presented interfaces.
+
+One limitation of our work concerns our ethical approach to privacy support. The decisions regarding the scenarios presented in our work encompass a trade-off between privacy and utility. Our paper adheres to a philosophy that considers neither privacy nor utility a morally superior goal: it is up to the end user to decide upon the balance between these two goals. We acknowledge that end users vary widely in how they evaluate this balance, hence the goal of our work is to help each user find the optimal balance that is right for them. From this perspective, we believe that consistent and coherent privacy profiles are a better starting point for users than taking an ``everything off'' or ``everything on'' approach. We acknowledge, though, that other (more paternalistic) moral standpoints exist, and that our work does not adhere to these standpoints.
+
+We also note that participants in our study made decisions about hypothetical rather than ``real life'' scenarios. However, compared to most other privacy studies, our study asks participants about very specific IoT scenarios, measuring their attitudes and behaviors in the context of these scenarios. The hypothetical nature of the scenarios is thus a conscious trade-off here: it is impossible to measure privacy in 4000+ scenarios without presenting them on a screen.
+
+Another limitation is that the effectiveness of our approach is contingent upon on the benevolence of the IoT infrastructure provider, and that it is easy for an ``evil'' provider to tweak the profiles in their favor~\cite{knijnenburg2013}. To that point, we note that the provider of the IoT infrastructure may very well be a separate entity from the device vendors (similar to how smartphone OS providers are often separate from smartphone app developers). In that case, it is not in the infrastructure provider's interest to ``oversell'' the IoT functionality, but rather to increase users' comfort with the use of their platform.
+
+A limitation regarding our machine learning approach is that it assumes a perfect assignment of users to profiles. However, in our current approach, users of the profile-based interface make their own choice as to which profile they want to apply. If they do not make the correct choice, then this introduces additional uncertainty, and the accuracy of our approach will be substantially lower than described in our paper. This limitation highlights the importance of the parsimony/accuracy tradeoff: Users benefit from parsimony in the context of our study, because parsimony makes for simpler profiles, which are easier to understand and hence easier to choose from. At the same time, though, these more parsimonious profiles are likely going to be less accurate, which means that users need to make more manual adjustments to the profile-based settings.
+
+Our biggest limitation is that we did not test any of the presented interfaces, so we don’t know what level of complexity (in term of both the complexity of the user interfaces and the profiles) is most suitable. I will address this limitation in my proposed work (Chapter~\ref{chapter:evaluation}).
+
+\section{Summary}
+In this chapter, we have presented the following:
+\begin{itemize}
+	\item Using an intricate mixed fractional factorial study design, we collect a dataset of 1133 participants making 13596 privacy decisions on 4608 scenarios.
+	\item We perform statistical analysis on this dataset to develop a layered IoT privacy-setting interface. As our analysis shows more complex decision patterns than our previous work, we present guidelines to translate our statistical results into a more sophisticated settings interface design.
+	\item We perform machine learning analysis on our dataset to create a set of ``smart profiles" for our IoT privacy-setting interface. Beyond our previous work, we conduct a deeper analysis regarding the trade-off between parsimony and accuracy of our prediction models, leading to a better-informed selection of smart profiles.
+	\item Aside from the privacy-setting interface and the smart profiles, we make specific design recommendations for household IoT devices that can help to minimize users' privacy concerns. 
+\end{itemize}
+
+In the next chapter, we discuss our work applying data-driven approach in the fitness IoT context. 
