--- a/Proposal/bibliography.bib
+++ b/Proposal/bibliography.bib
@@ -709,6 +709,14 @@
 	file = {ACM Full Text PDF:C\:\\Users\\parit\\Zotero\\storage\\IWGJ8XZL\\Bahirat et al. - 2018 - Scenario Context Vs Framing and Defaults in Manag.pdf:application/pdf}
 }
 
+@article{He2018data,
+	title={A Data Driven approach to Designing for Privacy in Household IoT},
+	author={He, Yangyang and Bahirat, Paritosh and Menon, Abhilash and Knijnenburg, Bart P},
+	journal={Transactions on Interactive Intelligent Systems},
+	publisher={ACM},
+	year={2018}
+}
+
 @Article{Holte1993,
 	author="Holte, Robert C.",
 	title="Very Simple Classification Rules Perform Well on Most Commonly Used Datasets",
@@ -789,23 +797,9 @@
 	Volume = {41},
 	Year = {2007},
 	Bdsk-Url-1 = {http://onlinelibrary.wiley.com/doi/10.1111/j.1745-6606.2006.00070.x/abstract},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1111/j.1745-6606.2006.00070.x}}
-
-@inproceedings{knijnenburg2013,
-	address = {Paris, France},
-	title = {Preference-based location sharing: are more privacy options really better?},
-	isbn = {978-1-4503-1899-0},
-	shorttitle = {Preference-based location sharing},
-	url = {http://doi.acm.org/10.1145/2470654.2481369},
-	doi = {10.1145/2470654.2481369},
-	urldate = {2013-05-11},
-	booktitle = {Proceedings of the {SIGCHI} {Conference} on {Human} {Factors} in {Computing} {Systems}},
-	publisher = {ACM},
-	author = {Knijnenburg, Bart P. and Kobsa, Alfred and Jin, Hongxia},
-	year = {2013},
-	keywords = {information disclosure, location-sharing services, Privacy calculus, decision making},
-	pages = {2667--2676}
+	Bdsk-Url-2 = {http://dx.doi.org/10.1111/j.1745-6606.2006.00070.x}
 }
+
 
 @inproceedings{Hudson1996,
 	author = {Hudson, Scott E. and Smith, Ian},
@@ -971,14 +965,6 @@
 	booktitle={Proceedings of the 4th international conference on mobile technology, applications, and systems and the 1st international symposium on Computer human interaction in mobile technology},
 	pages={583--586},
 	year={2007},
-}
-
-@inproceedings{gross2005inf,
-	title={Information revelation and privacy in online social networks},
-	author={Gross, Ralph and Acquisti, Alessandro},
-	booktitle={Proceedings of the 2005 ACM workshop on Privacy in the electronic society},
-	pages={71--80},
-	year={2005},
 }
 
 @article{gubbi2013internet,
@@ -1373,24 +1359,6 @@
 	author={Witten, Ian H and Frank, Eibe and Hall, Mark A and Pal, Christopher J},
 	year={2016},
 	publisher={Morgan Kaufmann}
-}
-
-@inproceedings{bahirat_scenario_2018,
-	address = {Tokyo, Japan},
-	series = {{IUI}'18},
-	title = {Scenario {Context} {V}/s {Framing} and {Defaults} in {Managing} {Privacy} in {Household} {IoT}},
-	isbn = {978-1-4503-5571-1},
-	url = {http://doi.acm.org/10.1145/3180308.3180372},
-	doi = {10.1145/3180308.3180372},
-	abstract = {The Internet of Things provides household device users with an ability to connect and manage numerous devices over a common platform. However, the sheer number of possible privacy settings creates issues such as choice overload. This article outlines a data-driven approach to understand how users make privacy decisions in household IoT scenarios. We demonstrate that users are not just influenced by the specifics of the IoT scenario, but also by aspects immaterial to the decision, such as the default setting and its framing.},
-	urldate = {2018-05-04},
-	booktitle = {Proceedings of the 23rd {International} {Conference} on {Intelligent} {User} {Interfaces} {Companion}},
-	publisher = {ACM},
-	author = {Bahirat, Paritosh and Sun, Qizhang and Knijnenburg, Bart P.},
-	year = {2018},
-	keywords = {Data-Driven Design, Internet of Things, Privacy},
-	pages = {63:1--63:2},
-	file = {ACM Full Text PDF:C\:\\Users\\parit\\Zotero\\storage\\IWGJ8XZL\\Bahirat et al. - 2018 - Scenario Context Vs Framing and Defaults in Manag.pdf:application/pdf}
 }
 
 @article{knijnenburg2016taking,
